--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
             <div class="form-control">
                 <label for="username">Username</label>
                 <input type="text" id="username" placeholder="Username">
-                <i id="suc">✓</i>
-                <i id="err">!</i>
+                <i id="suc">✅</i>
+                <i id="err">❗️</i>
                 <small>Message</small>
             </div>
             <div class="form-control">
                 <label for="email">Email</label>
                 <input type="email" id="email" placeholder="Email">
-                <i id="suc">✓</i>
-                <i id="err">!</i>
+                <i id="suc">✅</i>
+                <i id="err">❗️</i>
                 <small>Message</small>
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" id="password" placeholder="Password">
-                <i id="suc">✓</i>
-                <i id="err">!</i>
+                <i id="suc">✅</i>
+                <i id="err">❗️</i>
                 <small>Message</small>
             </div>
             <div class="form-control">
                 <label for="checkpassword">Check Password</label>
                 <input type="password" id="checkpassword" placeholder="Check Password">
-                <i id="suc">✓</i>
-                <i id="err">!</i>
+                <i id="suc">✅</i>
+                <i id="err">❗️</i>
                 <small>Message</small>
             </div>
             <button id="sign-btn">Sign-In</button>
